--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          
          <div class="header-text">
             <h1>Website Template</h1>
-            <h2>My HTML Project</h2>>
+            <h2>My HTML Project</h2>
          </div>
     </header>
     <div class="wrapper">
